--- a/README
+++ b/README
@@ -1,8 +1,10 @@
 Extended Audioop
 By Jon Arne Jørgensen <jonjon.arnearne@gmail.com>
 
-This is as the name implies an extension on the original audioop python module.
+This is an extension to the python audioop module to make it handle 24Bit PCM data.
+This module is a drop-in replacement for the original audioop package.
+
 I've ported all functions except adpcm2lin since I don't have any adpcm files to test with.
 
 I have not done any changes to findfit, findmax and findfactor.
-I bellieve these functions should work unmodified, but I've not tested them.
+I think these 3 functions should work unmodified, but I've not tested them.
